--- a/AppVikings.Offended/AmIOffended/AmIOffended.UWP/AmIOffended.UWP.csproj
+++ b/AppVikings.Offended/AmIOffended/AmIOffended.UWP/AmIOffended.UWP.csproj
@@ -148,13 +148,16 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MvvmCross.StarterPack">
+      <Version>5.6.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.6" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AmIOffended\AmIOffended.csproj">
-      <Project>{9E62AE89-D8B8-495E-934B-DCD35F65FCB6}</Project>
-      <Name>AmIOffended</Name>
+    <ProjectReference Include="..\AmIOffended\AmIOffended.Core.csproj">
+      <Project>{2456C208-71EE-4CAB-844D-5C3D3927366A}</Project>
+      <Name>AmIOffended.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
