--- a/AppVikings.Offended/AmIOffended/AmIOffended.Android/AmIOffended.Android.csproj
+++ b/AppVikings.Offended/AmIOffended/AmIOffended.Android/AmIOffended.Android.csproj
@@ -78,7 +78,6 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\icon.png" />
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
@@ -98,6 +97,9 @@
       <Project>{2456C208-71EE-4CAB-844D-5C3D3927366A}</Project>
       <Name>AmIOffended.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
