--- a/AppVikings.Offended/AmIOffended/AmIOffended.Android/Properties/AndroidManifest.xml
+++ b/AppVikings.Offended/AmIOffended/AmIOffended.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.AmIOffended">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="AmIOffended.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="AppVikings.AmIOffended" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="20" />
+	<application android:label="AmIOffended" android:icon="@drawable/offended_icon"></application>
 </manifest>
